--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title> Fylo landing page with two column layout</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,13 +15,19 @@
   </style>
 </head>
 <body>
-
+  <div>
+    <nav>
   Features
   Team
   Sign In
+    </nav>
+  </div>
 
+  <div>
+    <h1>
   All your files in one secure location, accessible anywhere.
-
+    </h1>
+  </div>
   Fylo stores your most important files in one secure location. 
   Access them wherever you need, share and collaborate with friends, 
   family, and co-workers.
