Maquetado rancio basico de html

--- a/index.html
+++ b/index.html
@@ -24,53 +24,99 @@
   </div>
 
   <div>
-    <h1>
+
+    <section id="section1">
+        <h1>
   All your files in one secure location, accessible anywhere.
-    </h1>
+        </h1>
   </div>
+  
+  <div>
+    <p>
   Fylo stores your most important files in one secure location. 
   Access them wherever you need, share and collaborate with friends, 
   family, and co-workers.
+    </p>
+  </div>
+  <div>
+  <form action=""><input type="email" placeholder="Enter your email..."></form>
+  </div>
+  <div><button>Get Started</button></div>
 
-  Get Started
+    </section>
 
-  Stay productive, wherever you are
-
+    <section id="section2">
+      <div>
+        <h1>Stay productive, wherever you are</h1>
+      </div>
+      <div>
+        <p>
   Never let location be an issue when accessing your files. Fylo has you 
   covered for all of your file storage needs.
-
+          <br>
+          <br>
   Securely share files and folders with friends, family and colleagues for 
   live collaboration. No email attachments required!
+        </p>
+      </div>
 
-  See how Fylo works
-
+  <div><a href="#">See how Fylo works</a></div>
+  <div>
+    <p>
   Fylo has improved our team productivity by an order of magnitude. Since 
   making the switch our team has become a well-oiled collaboration machine.
-
+    </p>
+    <br>
+    <div>
   Kyle Burton
   Founder & CEO, Huddle
+    </div>
+  </div>
+   </section>
+  
+   <br>
 
-  Get early access today
+   <section id="section3">
+    <h2>Get early access today</h2>
 
+  <div>
+    <p>
   It only takes a minute to sign up and our free starter tier is extremely generous. 
   If you have any questions, our support team would be happy to help you.
+    </p>
+  </div>
+  <div>
+  <form action=""><input type="email" placeholder="email@example.com"></form>
+  </div>
+  <div>
+    <button>Get Started For Free</button>
+  </div>
+  </section>
 
-  Get Started For Free
+  <br>
+   <br>
+   <br>
 
+  
+  <footer>
+    <div>
   Phone: +1-543-123-4567
   example@fylo.com
+    </div>
 
+    <div>
   About Us
   Jobs
   Press
   Blog
+    </div>
 
+  <div>
   Contact Us
   Terms
   Privacy
-
-  <footer>
-    
+  </div>
+  
   </footer>
 </body>
 </html>
