--- a/index.html
+++ b/index.html
@@ -47,6 +47,58 @@
       </div>
     </section>
 
+    <!-- SECTION2 -->
+
+   <section id="section2">
+    <img class="illus" src="images/illustration-2.svg" alt="">
+
+    <div class="info1">
+      <div class="feature">
+        <h2>Stay productive, wherever you are</h2>
+        <p>Never let location be an issue when accessing your files. Fylo has you 
+          covered for all of your file storage needs.</p>
+        <p>Securely share files and folders with friends, family and colleagues for 
+          live collaboration. No email attachments required!</p>
+        <div class="feature-link">
+          <a href="#">See how Fylo works <img src="images/icon-arrow.svg" alt=""></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <p class="testimonial">Fylo has improved our team productivity by an order of magnitude. Since 
+          making the switch our team has become a well-oiled collaboration machine.</p>
+
+        <div class="author-cont">
+          <img src="images/avatar-testimonial.jpg" alt="">
+          <div class="author">
+            <cite class="author-name">Kyle Burton</cite>
+            <cite class="author-title">Founder & CEO, Huddle</cite>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+<!-- SECTION3 -->
+
+  <section id="section3">
+
+      <div class="info">
+        <h3>Get early access today</h3>
+        <p class="body-main">It only takes a minute to sign up and our free starter tier is extremely generous. 
+          If you have any questions, our support team would be happy to help you.</p>
+      </div>
+
+      <div class="formulario">
+        <form action="/" method="post">
+            <input class="form-input" type="email" name="email" placeholder="Enter your email...">
+            <button class="form-button" type="submit">Get Started For Free</button>
+        </form>
+      </div>
+
+  </section>
+
 
 
 </body>
